<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headerName"
        android:id="@+id/headerName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="374dp"
        android:layout_height="300dp"
        android:layout_marginStart="21dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerName"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteY="181dp">


        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero" />

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/cleareverything"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearEverything"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equals"
            app:layout_column="0"
            app:layout_row="4" />


    </android.support.v7.widget.GridLayout>

    <TextView
        android:id="@+id/results"
        android:layout_width="96dp"
        android:layout_height="38dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="52dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

</android.support.constraint.ConstraintLayout>